# QtTube

./: .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  CMakeLists.txt  QtTube.pro  README.md  browsehelper.hpp  downloadmanager.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qttubeapplication.hpp  settingsstore.hpp  youtube-qt.pro
application/: CMakeLists.txt
application/cmake/: AddIconToBinary.cmake
application/program_info/: AppRun
application/res/: emojis-svg-10.json  qttube.icns  resources.qrc
application/res/player/: integration.js  patches.js
application/res/player/annotationlib/: AnnotationRenderer.css
application/src/: eastereggs.cpp  httprequest.cpp  httprequest.h  main.cpp  mainwindow.cpp  mainwindow.h  qttubeapplication.cpp  qttubeapplication.h  ytemoji.cpp
application/src/plugins/: pluginbrowser.cpp  pluginbrowser.h  pluginbrowsercache.h  pluginbuilddownloader.cpp  pluginbuilddownloader.h  pluginentry.cpp  pluginentry.h  pluginmanager.cpp  pluginmanager.h
application/src/stores/: emojistore.cpp  emojistore.h  genericstore.h  settingsstore.cpp  settingsstore.h
application/src/ui/: browsehelper.cpp  browsehelper.h  channelbrowser.cpp
application/src/ui/forms/: emojimenu.cpp  emojimenu.h  emojimenu.ui  livechatwindow.cpp  livechatwindow.h
application/src/ui/forms/livechat/: giftredemptionmessage.cpp  giftredemptionmessage.h  livechatwindow.cpp  livechatwindow.h  livechatwindow.ui  paidmessage.cpp  paidmessage.h  specialmessage.cpp  textmessage.cpp  textmessage.h
application/src/ui/forms/plugins/: addplugindialog.cpp  addplugindialog.h  basepluginentry.cpp  basepluginentry.h  pluginbrowserview.cpp  pluginbrowserview.h  pluginbrowserview.ui  pluginbuilddownloader.cpp  pluginbuilddownloader.h  plugindownloaddialog.cpp  plugindownloaddialog.h
application/src/ui/forms/settings/: addplugindialog.cpp  addplugindialog.h  addplugindialog.ui  settingsform.cpp  settingsform.h  settingsform.ui  termfilterview.cpp  termfilterview.h  termfilterview.ui
application/src/ui/views/: channelview.cpp  channelview.h  preloaddata.h  viewcontroller.cpp  viewcontroller.h  watchview.cpp  watchview.h  watchview_ui.cpp  watchview_ui.h  watchviewplayer.cpp  watchviewplayer.h
application/src/ui/widgets/: clickablewidget.h  closebutton.cpp  closebutton.h  continuablelistwidget.cpp  continuablelistwidget.h  emojigraphicsitem.cpp  emojigraphicsitem.h  findbar.cpp  findbar.h  flowlayout.cpp  pluginwidget.cpp  pluginwidget.h  watchnextfeed.cpp  watchnextfeed.h
application/src/ui/widgets/accountmenu/: accountcontrollerwidget.cpp  accountcontrollerwidget.h  accountentrywidget.cpp  accountentrywidget.h  accountmenuwidget.cpp  accountmenuwidget.h  accountswitcherwidget.cpp  accountswitcherwidget.h
application/src/ui/widgets/download/: downloadentity.cpp  downloadmanager.cpp
application/src/ui/widgets/emoji/: cachednetworkworker.cpp  cachednetworkworker.h  emojigraphicsitem.cpp  emojigraphicsitem.h  emojimenu.cpp  emojimenu.h
application/src/ui/widgets/labels/: badgelabel.cpp  badgelabel.h  channelbadgelabel.cpp  channelbadgelabel.h  channellabel.cpp  channellabel.h  emojilabel.cpp  emojilabel.h  iconlabel.cpp  iconlabel.h  tubelabel.cpp  tubelabel.h
application/src/ui/widgets/livechat/: giftredemptionmessage.cpp  giftredemptionmessage.h  paidmessage.cpp  paidmessage.h  specialmessage.cpp  specialmessage.h  textmessage.cpp  textmessage.h
application/src/ui/widgets/modals/: focusedmodal.cpp  focusedmodal.h  sharemodal.cpp  sharemodal.h
application/src/ui/widgets/renderers/: browsechannelrenderer.cpp  (+3 more)
application/src/utils/: httputils.cpp  innertubestringformatter.cpp  osutils.cpp  osutils.h  stringutils.cpp  stringutils.h  tubeutils.cpp  tubeutils.h  uiutils.cpp  uiutils.h
application/src/wayland/: waylandinterface.cpp  waylandinterface.h
builtin_plugins/youtube/: CMakeLists.txt  main.cpp  youtubeauth.cpp  youtubeauth.h  youtubeplayer.cpp  youtubeplayer.h  youtubeplugin.cpp  youtubeplugin.h  youtubesettings.cpp  youtubesettings.h
builtin_plugins/youtube/res/: integration.js  patches.js  resources.qrc  styles.css
builtin_plugins/youtube/res/player/: integration.js  interceptors.js
builtin_plugins/youtube/settings/: channelfiltertable.cpp  channelfiltertable.h  channelfiltertable.ui  youtubesettings.cpp  youtubesettings.h  youtubesettingsform.cpp  youtubesettingsform.h  youtubesettingsform.ui
builtin_plugins/youtube/settings/data-wizards/: basicinfopage.cpp  entityselecttablemodel.h  intropage.cpp
builtin_plugins/youtube/utils/: conversion.cpp  conversion.h  replydata.cpp  replydata.h  stringutils.cpp  stringutils.h  tubeutils.cpp  tubeutils.h
lib/http/: CMakeLists.txt
lib/http/src/: cachedhttp.cpp  http.cpp  localcache.cpp  localcache.h  networkhttpreply.cpp  throttledhttp.cpp
plugin_interface/: CMakeLists.txt
plugin_interface/qttube-plugin/: plugininterface.h  replyutils.h
plugin_interface/qttube-plugin/components/: authstore.h  configstore.h  pluginauth.h  pluginsettings.h  pluginsettingswindow.cpp  pluginsettingswindow.h  reply.h  replytypes.h  settingsstore.h
plugin_interface/qttube-plugin/components/auth/: authroutine.h  authstore.cpp  authstore.h  webauthroutine.cpp  webauthroutine.h
plugin_interface/qttube-plugin/components/player/: fullscreennotification.cpp  fullscreennotification.h  player.h  pluginplayer.h  pluginwebplayer.cpp  pluginwebplayer.h  webplayer.cpp  webplayer.h
plugin_interface/qttube-plugin/components/replytypes/: channeldata.h  initialaccountdata.h  recommendedcontinuationdata.h  replytypes.h  resolveurldata.h  simpledatatypes.h  videodata.h
plugin_interface/qttube-plugin/components/settings/: playersettings.h  settingsstore.h  settingswindow.cpp  settingswindow.h
plugin_interface/qttube-plugin/objects/: badge.h  channel.h  emoji.h  notification.h  shelf.h  video.h  videodata.h
plugin_interface/qttube-plugin/objects/livechat/: livechat.h  livechatbase.h  livechatreplay.h
program_info/: AppRun.in  CMakeLists.txt  portable.txt  qttube.desktop  qttube.desktop.in  selfcontained.txt  win_install.nsi.in
(+387 files in other folders)
