cmake_minimum_required(VERSION 3.23)
project(QtTube
    VERSION 0.1
    DESCRIPTION "A Qt frontend for YouTube."
    HOMEPAGE_URL "https://github.com/BowDown097/QtTube"
    LANGUAGES CXX C)

# Have to do this for ui_ files
set(CMAKE_INCLUDE_CURRENT_DIR ON)

# Set up AUTOMOC, AUTORCC, and AUTOUIC
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

# Standard
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Names
## App
set(QTTUBE_APP_DESC "${CMAKE_PROJECT_DESCRIPTION}")
set(QTTUBE_APP_NAME "${CMAKE_PROJECT_NAME}")
## Version name
set(QTTUBE_VERSION_MAJOR "${CMAKE_PROJECT_VERSION_MAJOR}")
set(QTTUBE_VERSION_MINOR "${CMAKE_PROJECT_VERSION_MINOR}")
set(QTTUBE_VERSION_NAME "${CMAKE_PROJECT_VERSION}")
if(CMAKE_PROJECT_VERSION_TWEAK)
    set(QTTUBE_VERSION_NAME4 "${QTTUBE_VERSION_MAJOR}.${QTTUBE_VERSION_MINOR}.\
                              ${CMAKE_PROJECT_VERSION_PATCH}.${CMAKE_PROJECT_VERSION_TWEAK}")
elseif(CMAKE_PROJECT_VERSION_PATCH)
    set(QTTUBE_VERSION_NAME4 "${QTTUBE_VERSION_MAJOR}.${QTTUBE_VERSION_MINOR}.\
                              ${CMAKE_PROJECT_VERSION_PATCH}.0")
else()
    set(QTTUBE_VERSION_NAME4 "${QTTUBE_VERSION_MAJOR}.${QTTUBE_VERSION_MINOR}.0.0")
endif()

# macOS bundle settings
if(APPLE)
    set(MACOSX_BUNDLE_BUNDLE_NAME "${QTTUBE_APP_NAME}")
    set(MACOSX_BUNDLE_BUNDLE_VERSION "${QTTUBE_VERSION_NAME}")
    set(MACOSX_BUNDLE_INFO_STRING "${QTTUBE_APP_NAME}: ${QTTUBE_APP_DESC}")
    set(MACOSX_BUNDLE_LONG_VERSION_STRING "${QTTUBE_VERSION_NAME}")
    set(MACOSX_BUNDLE_SHORT_VERSION_STRING "${QTTUBE_VERSION_NAME}")
endif()

# Qt setup
find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
set(QTTUBE_QT_VERSION_MAJOR ${QT_VERSION_MAJOR} CACHE STRING "Qt version to use, defaults to ${QT_VERSION_MAJOR}")

add_subdirectory(application)
